welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: identifier expected but '(' found.
	var x = tab.(progres)
                    ^